k8s/producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer-deployment
  namespace: streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
      - name: producer
        image: local/producer:latest
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
